Added functions to remove books and toggle between `read` and `not read`, cleaned some code by moving duplicates into functions, and redid some CSS.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <label for="pages">No. of pages: <input type="number" id="pages" name="pages" class="label" required></label>
             <div>
                 Read?:
-                <input type="radio" id="read" name="read-yet" value="read" class="read" required><label for="read">Read</label>
-                <input type="radio" id="not-read" name="read-yet" value="not-read" class="read"><label for="not-read">Not read</label>
+                <input type="radio" id="read" name="read-yet" value="read" required><label for="read">Read</label>
+                <input type="radio" id="not-read" name="read-yet" value="not read"><label for="not-read">Not read</label>
             </div>
             <button type="submit" id="submit">Submit</button> <button type="reset" id="reset">Reset</button> <button type="button" id="close">Close</button>
         </form>
